--- a/monetary/zweig_model.ipynb
+++ b/monetary/zweig_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -38,7 +38,7 @@
        "pandas.core.indexes.datetimes.DatetimeIndex"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "pandas.core.indexes.datetimes.DatetimeIndex"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -249,7 +249,7 @@
        "[6295 rows x 6 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "[6523 rows x 1 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "228"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "[6293 rows x 1 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
        "              dtype='datetime64[ns]', name='date', length=6295, freq=None)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
        "              dtype='datetime64[ns]', name='date', length=6293, freq=None)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -1245,7 +1245,7 @@
        "[6246 rows x 7 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -1268,7 +1268,7 @@
        "numpy.float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -1384,31 +1384,39 @@
       "funds are now 12728.18707568519\n",
       "holdings are now 0\n",
       " \n",
-      "bought on 2002-11-07  at a price of 90.760002\n",
+      "bought on 1998-09-30  at a price of 101.75\n",
       "funds are now 0\n",
-      "holdings are now 140.24004842667577\n",
+      "holdings are now 125.09274767258171\n",
       " \n",
-      "sold on 2005-02-02  at a price of 119.269997\n",
-      "funds are now 16726.430155129474\n",
+      "sold on 1999-07-01  at a price of 138.03125\n",
+      "funds are now 17266.708327181044\n",
       "holdings are now 0\n",
       " \n",
-      "bought on 2008-10-29  at a price of 93.08000200000001\n",
+      "bought on 2001-01-04  at a price of 133.546875\n",
       "funds are now 0\n",
-      "holdings are now 179.69950360690228\n",
+      "holdings are now 129.29324124717292\n",
       " \n",
-      "sold on 2018-12-20  at a price of 247.169998\n",
-      "funds are now 44416.32594711903\n",
+      "sold on 2004-06-30  at a price of 114.529999\n",
+      "funds are now 14807.954790745473\n",
       "holdings are now 0\n",
       " \n",
-      "bought on 2020-03-04  at a price of 312.859985\n",
+      "bought on 2007-09-18  at a price of 152.46000700000002\n",
       "funds are now 0\n",
-      "holdings are now 141.968701900689\n",
+      "holdings are now 97.12681431757687\n",
+      " \n",
+      "sold on 2015-12-17  at a price of 204.860001\n",
+      "funds are now 19897.399278225614\n",
+      "holdings are now 0\n",
+      " \n",
+      "bought on 2019-08-01  at a price of 294.839996\n",
+      "funds are now 0\n",
+      "holdings are now 67.48541428628161\n",
       " \n",
       "sold on 2020-12-31  at a price of 373.880005\n",
-      "funds are now 53079.25897647312\n",
+      "funds are now 25231.447030782037\n",
       "holdings are now 0\n",
       " \n",
-      "53079.25897647312\n",
+      "25231.447030782037\n",
       "0\n"
      ]
     }
@@ -1418,6 +1426,9 @@
     "funds = 10000\n",
     "holdings = 0\n",
     "prior_index = None\n",
+    "\n",
+    "# meta\n",
+    "changes = []\n",
     "\n",
     "def buy(row):\n",
     "    global funds\n",
@@ -1451,22 +1462,26 @@
     "        if current_rate != old_rate:\n",
     "            # A change in the prime rate has occured\n",
     "            change = current_rate - old_rate\n",
+    "            changes.append(change)\n",
     "            if change < 0:\n",
     "                # prime rate was cut -> BUY SIGNALS\n",
     "                if old_rate < 5:\n",
     "                    # buy signal 1 (any initial cut if peak was under 5%)\n",
     "                    buy(row)\n",
-    "#                 else:\n",
-    "#                     # buy signal 2 (either second cut or full 1 percentage point cut)\n",
-    "#                     #TODO\n",
+    "                else:\n",
+    "                    # buy signal 2 (either second cut or full 1 percentage point cut)\n",
+    "                    if change <= -1 or (len(changes) > 1 and changes[-1] < 0):\n",
+    "                        buy(row)\n",
     "            else:\n",
     "                # prime rate was hiked -> SELL SIGNALS\n",
     "                if old_rate > 5:\n",
     "                    # sell signal 1 (any initial hike if primes low was over 5%)\n",
     "                    sell(row)\n",
-    "#                 else:\n",
-    "#                     #sell signal 2 (second hike or full 1 percentage point hike)\n",
-    "#                     #TODO\n",
+    "                else:\n",
+    "                    #sell signal 2 (second hike or full 1 percentage point hike)\n",
+    "                    if change >= 1 or (len(changes) > 1 and changes[-1] > 0):\n",
+    "                        sell(row)\n",
+    "                        \n",
     "    prior_index = index\n",
     "\n",
     "sell(trading_days.iloc[-1])\n",
@@ -1476,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
